[#2494] Hide dates when JavaScript is active to prevent flickering

--- a/ckan/public/base/css/main.css
+++ b/ckan/public/base/css/main.css
@@ -5560,6 +5560,9 @@ a.tag:hover {
 .js .tab-content.active {
   display: block;
 }
+.js .datetime {
+    display: none;
+}
 .box {
   background-color: #FFF;
   border: 1px solid #cccccc;
